调整启动脚本